--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
   rive: ^0.13.0
   intl: ^0.19.0
+  url_launcher: ^6.2.4
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
